# mnn-asr

./: .gitignore  API_SUMMARY.md  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: find_device.cmake  find_lib_files.cmake
export/: asrexport.py  requirements.txt
include/: asr.hpp
sample/: README.md  asr_python_sample.py  asr_sample.cpp  test_api.sh
src/: CMakeLists.txt  asr.cpp  asr.hpp  asr_demo.cpp  asrconfig.hpp  mnn_asr_api.cpp  mnn_asr_api.hpp  reconstruct_speech.cpp  reconstruct_speech.hpp  reconstruct_speech_impl.cpp  reconstruct_speech_impl.h  tokenizer.cpp  tokenizer.hpp  utils.h  wavfrontend.cpp  wavfrontend.h
src/utils/: utils.cpp  utils.h
